# SimpleWaveFunctionCollapse

./: .gitignore  README.md
WaveFunctionCollapse/: CMakeLists.txt  DataStructures.h  IMapManager.h  ITilePresenter.h  MapManagerImpl.cpp  MapManagerImpl.h  TileImpl.cpp  TileImpl.h  TileInterface.h  main.cpp  mainwindow.cpp  mainwindow.h  tilepresenter.cpp  tilepresenter.h  wfctile.cpp  wfctile.h
WaveFunctionCollapse/WFCTests/WFCTests/: CMakeLists.txt  tst_wfctests.cpp
